adede the inactive status in add salary